// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with multiple expenses 1`] = `
<div>
  <h2>
    Viewing 
    3
     
    expenses
     totaling 
    $235.00
  </h2>
</div>
`;

exports[`should render correctly with one expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totaling 
    $235.00
  </h2>
</div>
`;
